Fix networkidle timeouts by blocking Google Analytics in tests
- Block Google Analytics at source: conditionally load GA only in production (not test/staging)
- Block analytics at test level: Playwright route blocking as fallback
- Fix global setup: always use chromium to avoid browser installation issues
- Remove tablet from CI matrix (temporarily disabled)
- Set HUGO_ENV=test in GitHub Actions workflow

This fixes intermittent networkidle timeout errors across all browsers.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        browser: [chromium, firefox, webkit, chrome, mobile-chrome, mobile-safari, tablet]
+        browser: [chromium, firefox, webkit, chrome, mobile-chrome, mobile-safari]
     
     steps:
     - name: Checkout code
@@ -48,7 +48,9 @@ jobs:
           npx playwright install --with-deps chromium
         elif [ "${{ matrix.browser }}" = "mobile-chrome" ]; then
           npx playwright install --with-deps chromium
-        elif [ "${{ matrix.browser }}" = "mobile-safari" ] || [ "${{ matrix.browser }}" = "tablet" ]; then
+        elif [ "${{ matrix.browser }}" = "mobile-safari" ]; then
+          npx playwright install --with-deps webkit
+        elif [ "${{ matrix.browser }}" = "tablet" ]; then
           npx playwright install --with-deps webkit
         else
           npx playwright install --with-deps ${{ matrix.browser }}
