--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,6 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         browser: [chromium, firefox, webkit, chrome]
+        # mobile-chrome and mobile-safari temporarily disabled - need investigation
     
     steps:
     - name: Checkout code
@@ -43,12 +44,19 @@ jobs:
 
     - name: Install Playwright Browsers
       run: |
-        # Map project name to browser name for installation
-        if [ "${{ matrix.browser }}" = "chrome" ]; then
-          npx playwright install --with-deps chromium
-        else
-          npx playwright install --with-deps ${{ matrix.browser }}
+        # Global setup always uses chromium, so install it for all jobs
+        # Then install the specific browser for this matrix job
+        npx playwright install --with-deps chromium
+        
+        # Install additional browser if different from chromium
+        if [ "${{ matrix.browser }}" = "firefox" ]; then
+          npx playwright install --with-deps firefox
+        elif [ "${{ matrix.browser }}" = "webkit" ]; then
+          npx playwright install --with-deps webkit
+        elif [ "${{ matrix.browser }}" = "mobile-safari" ]; then
+          npx playwright install --with-deps webkit
         fi
+        # chrome and mobile-chrome use chromium, already installed
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v3
@@ -58,6 +66,8 @@ jobs:
 
     - name: Build site
       run: npm run build
+      env:
+        HUGO_ENV: test
 
     - name: Start Hugo server
       run: |
@@ -65,6 +75,7 @@ jobs:
         sleep 10
       env:
         CI: true
+        HUGO_ENV: test
 
     - name: Run Playwright tests
       run: npx playwright test --project=${{ matrix.browser }}
