--- a/package.json
+++ b/package.json
@@ -48,18 +48,25 @@
     "validate:deployment:prod": "node scripts/validate-deployment.js --environment=prod",
     "test:e2e": "playwright test --project=chromium --project=firefox",
     "test:e2e:headed": "playwright test --headed --project=chromium",
-    "test:e2e:ui": "playwright test --ui --project=chromium",
+    "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:chromium": "playwright test --project=chromium",
     "test:e2e:firefox": "playwright test --project=firefox",
     "test:e2e:webkit": "playwright test --project=webkit",
+    "test:e2e:docker": "docker-compose -f docker-compose.test.yml run --rm playwright-test",
+    "test:e2e:docker:build": "docker-compose -f docker-compose.test.yml build",
+    "test:e2e:docker:chromium": "docker-compose -f docker-compose.test.yml run --rm playwright-test npx playwright test --project=chromium",
+    "test:e2e:docker:firefox": "docker-compose -f docker-compose.test.yml run --rm playwright-test npx playwright test --project=firefox",
+    "test:e2e:docker:webkit": "docker-compose -f docker-compose.test.yml run --rm playwright-test npx playwright test --project=webkit",
+    "test:e2e:webkit:docker": "docker-compose -f docker-compose.playwright.yml run --rm playwright npx playwright test --project=webkit",
+    "test:e2e:webkit:build": "docker-compose -f docker-compose.playwright.yml build",
     "test:e2e:auth": "playwright test tests/e2e/auth",
     "test:e2e:waiver": "playwright test tests/e2e/waiver",
     "test:e2e:rsvp": "playwright test tests/e2e/rsvp",
     "test:e2e:minors": "playwright test tests/e2e/minors",
     "test:e2e:smoke": "playwright test --grep @smoke",
     "test:e2e:report": "playwright show-report test-results/html-report",
-    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report:open": "open test-results/html-report/index.html || xdg-open test-results/html-report/index.html || start test-results/html-report/index.html",
     "test:e2e:ci": "playwright test --reporter=html,json,junit"
   },
   "dependencies": {
@@ -76,12 +83,14 @@
     "sonner": "^2.0.7"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.8",
     "autoprefixer": "^10.4.19",
+    "axe-core": "^4.11.1",
     "babel-loader": "^10.0.0",
     "concurrently": "^8.2.2",
     "css-loader": "^6.10.0",
